--- a/src/giaodien/ThanhToan.form
+++ b/src/giaodien/ThanhToan.form
@@ -358,7 +358,7 @@
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="cbxKhachNuocNgoai" alignment="0" min="-2" pref="263" max="-2" attributes="0"/>
+                                          <Component id="ckbLoaiKhach" alignment="0" min="-2" pref="263" max="-2" attributes="0"/>
                                           <Component id="cbxKhongLayHD" alignment="0" min="-2" pref="263" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -398,7 +398,7 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="cbxKhongLayHD" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="cbxKhachNuocNgoai" min="-2" max="-2" attributes="0"/>
+                      <Component id="ckbLoaiKhach" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="63" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnHuy" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
@@ -542,7 +542,7 @@
                 <Property name="text" type="java.lang.String" value="Kh&#xf4;ng l&#x1ea5;y ho&#xe1; &#x111;&#x1a1;n"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JCheckBox" name="cbxKhachNuocNgoai">
+            <Component class="javax.swing.JCheckBox" name="ckbLoaiKhach">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="17" style="0"/>
